<?xml version="1.0"?>
<package format="2">
  <name>r1_slam_measure</name>
  <version>0.0.1</version>
  <description>The r1_slam_measure package</description>

  <maintainer email="erwan.renault@utbm.fr">erwan</maintainer>
  <license>BSD</license>
  <author email="erwan.renault@utbm.fr">Erwan Renault</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
